crates/llvmkit-ir/tests/compile_fail/select_arm_forge.stderr
error[E0451]: field `_private` of struct `SelectNarrow` is private
  --> tests/compile_fail/select_arm_forge.rs:10:34
   |
10 |     let _forged = SelectNarrow { _private: core::marker::PhantomData };
   |                                  ^^^^^^^^ private field
